# ai-coding-bench

./: .gitignore  README.md  pyproject.toml
src/ai_coding_bench/: __init__.py  cli.py  models.py  report.py  runner.py
src/ai_coding_bench/tasks/: __init__.py  base.py  code_generation.py  code_review.py  debugging.py
