[project]
name = "ai-coding-bench"
version = "1.0.0"
description = "A comprehensive benchmark framework for evaluating AI coding models across real-world software engineering tasks"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "anthropic>=0.39.0",
    "openai>=1.50.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
ai-bench = "ai_coding_bench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
